--- a/APITwitter-s3-Glue.ipynb
+++ b/APITwitter-s3-Glue.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e8596424",
+   "id": "47a55c7c",
    "metadata": {},
    "source": [
-    "# Coleta de Twitter ultilixando a API do Twitter\n",
-    "   * Este projeto visa coletar twitts de um determinado assunto e posteriormente gravar estes dados no S3 para serem processadas utilizando o AWS Glue.\n",
-    "   * Para este projeto foi utilizado como assunto o'que estão dizendo dos candidatos presidenciáveis #Bolsonaro e #Lula"
+    "# Coleta de Twitter ultilixando a API do Twitter + AWS S3 e GLUE\n",
+    "  * Este projeto visa coletar tweets de um determinado assunto e posteriormente gravar estes dados no S3 para serem processadas utilizando o AWS Glue.\n",
+    "   * Para este projeto foi utilizado como assunto o'que estão dizendo dos candidatos presidenciáveis #Bolsonaro e #Lula\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "d5bf4c08",
+   "execution_count": 175,
+   "id": "ff45f4aa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:29:13.996298Z",
-     "start_time": "2022-06-14T12:29:13.970090Z"
+     "end_time": "2022-06-16T18:49:40.381405Z",
+     "start_time": "2022-06-16T18:49:40.349230Z"
     }
    },
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27b57e5",
+   "id": "8ca262dd",
    "metadata": {},
    "source": [
     "# Iniciando o Pipeline TW"
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "b453259f",
+   "execution_count": 176,
+   "id": "96a43703",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:29:17.878666Z",
-     "start_time": "2022-06-14T12:29:17.839045Z"
+     "end_time": "2022-06-16T18:49:40.535789Z",
+     "start_time": "2022-06-16T18:49:40.394304Z"
     }
    },
    "outputs": [
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Processamento iniciado: 2022/06/14 as 09:29:17 ###\n"
+      "### Processamento iniciado: 2022/06/16 as 15:49:40 ###\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ffed68",
+   "id": "8a71a337",
    "metadata": {},
    "source": [
     "# Lendo os arquivo TXT conteando as Keys Twitter + S3"
@@ -80,12 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "b889f2ca",
+   "execution_count": 177,
+   "id": "26aec029",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:33:03.690615Z",
-     "start_time": "2022-06-14T12:33:03.652400Z"
+     "end_time": "2022-06-16T18:49:45.873613Z",
+     "start_time": "2022-06-16T18:49:40.547814Z"
     }
    },
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee98cdc9",
+   "id": "62252a49",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-12T12:00:40.299308Z",
@@ -119,12 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "e6480d16",
+   "execution_count": 178,
+   "id": "0c28eac2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:33:06.797666Z",
-     "start_time": "2022-06-14T12:33:06.042836Z"
+     "end_time": "2022-06-16T18:49:46.651802Z",
+     "start_time": "2022-06-16T18:49:45.892243Z"
     }
    },
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e524c7",
+   "id": "6ed33cea",
    "metadata": {},
    "source": [
     "# Autenticação S3"
@@ -161,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "15a823ad",
+   "execution_count": 179,
+   "id": "4cef459d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:29:37.636464Z",
-     "start_time": "2022-06-14T12:29:37.597215Z"
+     "end_time": "2022-06-16T18:49:46.699652Z",
+     "start_time": "2022-06-16T18:49:46.664330Z"
     }
    },
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf7c3cb5",
+   "id": "c52ce406",
    "metadata": {},
    "source": [
     "# Coleta dados do Twitter"
@@ -197,12 +197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "b6342f52",
+   "execution_count": 180,
+   "id": "eb5b6ade",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:29:42.158863Z",
-     "start_time": "2022-06-14T12:29:42.139051Z"
+     "end_time": "2022-06-16T18:49:46.901611Z",
+     "start_time": "2022-06-16T18:49:46.720794Z"
     }
    },
    "outputs": [],
@@ -214,12 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "1ce141d6",
+   "execution_count": 181,
+   "id": "0e83e3b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:29:49.542926Z",
-     "start_time": "2022-06-14T12:29:49.409906Z"
+     "end_time": "2022-06-16T18:49:46.995588Z",
+     "start_time": "2022-06-16T18:49:46.923126Z"
     }
    },
    "outputs": [],
@@ -232,12 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "e61169ec",
+   "execution_count": 182,
+   "id": "773ce0eb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:39:28.026271Z",
-     "start_time": "2022-06-14T12:39:23.724798Z"
+     "end_time": "2022-06-16T18:49:52.440463Z",
+     "start_time": "2022-06-16T18:49:47.015114Z"
     }
    },
    "outputs": [],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03c98c3e",
+   "id": "940d6e6f",
    "metadata": {},
    "source": [
     "# Gravando o arquivo com os Twittes no S3"
@@ -288,12 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "7b4041d8",
+   "execution_count": 183,
+   "id": "e92cedd7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T12:39:31.967439Z",
-     "start_time": "2022-06-14T12:39:31.924430Z"
+     "end_time": "2022-06-16T18:49:52.502935Z",
+     "start_time": "2022-06-16T18:49:52.451935Z"
     }
    },
    "outputs": [],
@@ -325,12 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "b7fd4a68",
+   "execution_count": 184,
+   "id": "6b1dba86",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T13:51:54.440525Z",
-     "start_time": "2022-06-14T13:51:50.732677Z"
+     "end_time": "2022-06-16T18:49:55.426582Z",
+     "start_time": "2022-06-16T18:49:52.534387Z"
     }
    },
    "outputs": [
@@ -338,8 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File-2022-06-12.csv\n",
-      "O arquivo >File-2022-06-14.csv< foi gravado com sucesso no S3\n"
+      "O arquivo >File-2022-06-16.csv< já foi gravado no S3\n"
      ]
     }
    ],
@@ -348,7 +347,7 @@
     "\n",
     "#Contando numero de linhas do dataframe\n",
     "for cont in df_tw.count():\n",
-    "    contadorRows= cont\n",
+    "    contadorRows = cont\n",
     "\n",
     "#Obtendo a data data do processamento\n",
     "dataFile = datetime.today().strftime('%Y-%m-%d')\n",
@@ -361,11 +360,16 @@
     "objetosBucket = readbuckets3(aws_access_key_id,API_secret_access_Key)\n",
     "\n",
     "if contadorRows > 0 :\n",
+    "    \n",
+    "    #Verificando se já existe objeto gravado com o mesma data+nome\n",
     "    for objetos in objetosBucket:\n",
-    "  ###########################################################\n",
-    "        #Verificando se já existe objeto gravado com o mesma data+nome\n",
-    "        if objetos != novoArquivo:\n",
-    " ##############################################################\n",
+    "        if objetos == novoArquivo:\n",
+    "            contador = True\n",
+    "        else:\n",
+    "             contador = False \n",
+    "                \n",
+    "        #Inserindo o arquivo no S3\n",
+    "    if contador == False:\n",
     "            #Criando a conexão com o S3\n",
     "            s3 = boto3.client('s3', aws_access_key_id=aws_access_key_id,\n",
     "                                    aws_secret_access_key = API_secret_access_Key)\n",
@@ -374,10 +378,8 @@
     "            df_tw.to_csv(csv_buf, header=True , index=False)\n",
     "            csv_buf.seek(0)\n",
     "            s3.put_object(Bucket='twitter-datalake-raw', Body=csv_buf.getvalue(), Key='File-'+dataFile+'.csv')\n",
-    "            print(\"O arquivo >\" + novoArquivo +\"< foi gravado com sucesso no S3\")\n",
-    "            break\n",
-    "            \n",
-    "        else:\n",
+    "            print(\"O arquivo >\" + novoArquivo +\"< foi gravado com sucesso no S3\")         \n",
+    "    else:\n",
     "            print(\"O arquivo >\" + novoArquivo +\"< já foi gravado no S3\")\n",
     "else:\n",
     "    print(\"Nenhum registro disponivel para gravação no S3\")"
@@ -385,12 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "672ed844",
+   "execution_count": 185,
+   "id": "a7977618",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-14T13:43:01.033329Z",
-     "start_time": "2022-06-14T13:43:00.999721Z"
+     "end_time": "2022-06-16T18:49:55.475540Z",
+     "start_time": "2022-06-16T18:49:55.439371Z"
     }
    },
    "outputs": [
@@ -398,7 +400,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Processamento finalizado: 2022/06/14 as 10:43:01 ###\n"
+      "File-2022-06-12.csv\n",
+      "File-2022-06-14.csv\n",
+      "File-2022-06-16.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Listando os arquivos existentes no bucket\n",
+    "\n",
+    "for objetos in objetosBucket:\n",
+    "        print(objetos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "befdd57d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-16T18:49:55.707897Z",
+     "start_time": "2022-06-16T18:49:55.493163Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### Processamento finalizado: 2022/06/16 as 15:49:55 ###\n"
      ]
     }
    ],
@@ -411,80 +441,6 @@
     "hora = data_now.strftime(\"%H:%M:%S\")\n",
     "print('### Processamento finalizado: '+data+' as '+hora+' ###')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "id": "20ce93ca",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-14T13:36:48.863574Z",
-     "start_time": "2022-06-14T13:36:48.847838Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "novoArquivo = 'File-'+dataFile+'.csv'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "id": "4b2c2ccb",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-14T13:36:52.782483Z",
-     "start_time": "2022-06-14T13:36:52.743387Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'File-2022-06-14.csv'"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "novoArquivo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "id": "75b3f222",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-14T13:42:25.078258Z",
-     "start_time": "2022-06-14T13:42:25.044084Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File-2022-06-12.csv\n",
-      "File-2022-06-14.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "for objetos in objetosBucket:\n",
-    "        print(objetos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e9ac5ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
