--- a/APITwitter-s3-Glue.ipynb
+++ b/APITwitter-s3-Glue.ipynb
@@ -5,7 +5,7 @@
    "id": "47a55c7c",
    "metadata": {},
    "source": [
-    "# Coleta de Twitter ultilixando a API do Twitter + AWS S3 e GLUE\n",
+    "# Coleta de Twitter utilizando a API do Twitter + AWS S3 e GLUE\n",
     "  * Este projeto visa coletar tweets de um determinado assunto e posteriormente gravar estes dados no S3 para serem processadas utilizando o AWS Glue.\n",
     "   * Para este projeto foi utilizado como assunto o'que estão dizendo dos candidatos presidenciáveis #Bolsonaro e #Lula\n"
    ]
