--- a/APICovid-S3.ipynb
+++ b/APICovid-S3.ipynb
@@ -9,15 +9,16 @@
     "    \n",
     "   * Este pipeline foi desenvolvido com o objetivo de coletar dados de uma API public para monitoramento dos casos de COVID.\n",
     "       * API : https://covid19-brazil-api.now.sh/api/report/v1\n",
-    "    * Os dados são coletados e enviados para um bucket S3 para tratamento usando o Glue.                                            *Etapas:\n",
+    "    * Os dados são coletados e enviados para um bucket S3 para tratamento usando o Glue.
+    "    *Etapas:\n",
     "       * Ingestão dos dados: Python\n",
     "       * Armazenamento dos dados: AWS S3\n",
     "       * Startup do ETL automático : Função AWS Lambda\n",
     "       * Processo de ETL : AWS Glue\n",
     "       * Notificação de falha : AWS SNS\n",
     "   * Resumo:\n",
-    "       * Basicamente os dados serão ingeridos usando uma API Public + Python posteriormente este dados serão enviados para o            armazenamento na AWS S3 (bucket raw).\n",
-    "       * Após o arquivo ser ingerido no bucket uma função AWS Lambda é invocada para que seja iniciado o processo de ETL usando          o AWS Glue.\n",
+    "       * Basicamente os dados serão ingeridos usando uma API Public + Python posteriormente este dados serão enviados para o armazenamento na AWS S3 (bucket raw).\n",
+    "       * Após o arquivo ser ingerido no bucket uma função AWS Lambda é invocada para que seja iniciado o processo de ETL usando o AWS Glue.\n",
     "       * Um tópico AWS SNS foi criado para notificações de falha no processamento do ETL."
    ]
   },
