--- a/APICovid-S3.ipynb
+++ b/APICovid-S3.ipynb
@@ -12,11 +12,11 @@
     "    * Os dados são coletados e enviados para um bucket S3 para tratamento usando o Glue.\n",
     "   * Etapas:\n",
         "    \n",
-     "       * Ingestão dos dados: Python\n",
+     "       * Ingestão dos dados: Python",
     "    \n",
-     "       * Armazenamento dos dados: AWS S3\n",
+     "       * Armazenamento dos dados: AWS S3",
     "    \n",
-     "       * Startup do ETL automático : Função AWS Lambda\n",
+     "       * Startup do ETL automático : Função AWS Lambda",
     "    \n",
      "       * Processo de ETL : AWS Glue\n",
     "    \n",
