--- a/APICovid-S3.ipynb
+++ b/APICovid-S3.ipynb
@@ -11,23 +11,22 @@
     "       * API : https://covid19-brazil-api.now.sh/api/report/v1\n",
     "    * Os dados são coletados e enviados para um bucket S3 para tratamento usando o Glue.\n",
     "   * Etapas:\n",
-        "    \n",
-     "       * Ingestão dos dados: Python",
     "    \n",
-     "       * Armazenamento dos dados: AWS S3",
+    "       * Ingestão dos dados: Python.\n",     "    \n",
+    "       * Armazenamento dos dados: AWS S3.\n",
     "    \n",
-     "       * Startup do ETL automático : Função AWS Lambda",
+    "       * Startup do ETL automático : Função AWS Lambda.\n",
     "    \n",
-     "       * Processo de ETL : AWS Glue\n",
+    "       * Processo de ETL : AWS Glue\n",
     "    \n",
-     "       * Notificação de falha : AWS SNS\n",
-        "    \n",
+    "       * Notificação de falha : AWS SNS\n",
+    "    \n",
     "   * Resumo:\n",
-        "    \n",
+    "    \n",
     "       * Basicamente os dados serão ingeridos usando uma API Public + Python posteriormente este dados serão enviados para o armazenamento na AWS S3 (bucket raw).\n",
-        "    \n",
+    "    \n",
     "       * Após o arquivo ser ingerido no bucket uma função AWS Lambda é invocada para que seja iniciado o processo de ETL usando o AWS Glue.\n",
-        "    \n",
+    "    \n",
     "       * Um tópico AWS SNS foi criado para notificações de falha no processamento do ETL."
    ]
   },
