--- a/APICovid-S3.ipynb
+++ b/APICovid-S3.ipynb
@@ -5,7 +5,7 @@
    "id": "71d40ebb",
    "metadata": {},
    "source": [
-    "# Pipeline ultilizando uma API Publica + S3 + Lambda + Glue + SNS\n",
+    "# Pipeline utilizando uma API Publica + S3 + Lambda + Glue + SNS\n",
     "    \n",
     "   * Este pipeline foi desenvolvido com o objetivo de coletar dados de uma API public para monitoramento dos casos de COVID.\n",
     "       * API : https://covid19-brazil-api.now.sh/api/report/v1\n",
