--- a/APICovid-S3.ipynb
+++ b/APICovid-S3.ipynb
@@ -243,7 +243,7 @@
    "id": "87a39a3a",
    "metadata": {},
    "source": [
-    "# Gravando o arquivo os dados no S3"
+    "# Gravando o arquivo no S3"
    ]
   },
   {
